*portage-3.0.5
::gentoo		update dependencies, change eclass logic
::prototype99	add support for changelog viewing in newer versions
*portage-3.0.1
::gentoo		base ebuild
::poly-c		non-verbose patch
::prototype99	put rsync and patch behind use flags