@@ -1,10 +1,12 @@
+AUX 3.0.5changelog.patch 9713 BLAKE2B 04f64c2e401e895543e674a93d00f5478493dc0e317e79848945247229a62113d1e9ef26b642a85c5e00372daa8da246af7f47a72aec893d68940dad1684779c SHA512 67fde51056150c528fa95a267edb64bbb6b4dae091790c6f74be2687e975cf7656dcdaa7a22c58160dbcf604830b5a2f949d85a217cb1a9e77eeee44b95599ac
 AUX README.RESCUE 134 BLAKE2B 2cd153e0077388f29e11779670086c50fb1a470b9bb76969a747313021bb85c37b20327ab2feb9b2cc715849245875e7d8a5ae6ceee84b4a33d532996cb793bd SHA512 0df49e479e551648519ea4db0986584463eed498f77b133bd0e517389e71f4ff4069f1a5017c39f349bae62baa2ac32d968048c396261a9045ff00a0e5aa8bf4
-AUX changelog.patch 9713 BLAKE2B 04f64c2e401e895543e674a93d00f5478493dc0e317e79848945247229a62113d1e9ef26b642a85c5e00372daa8da246af7f47a72aec893d68940dad1684779c SHA512 67fde51056150c528fa95a267edb64bbb6b4dae091790c6f74be2687e975cf7656dcdaa7a22c58160dbcf604830b5a2f949d85a217cb1a9e77eeee44b95599ac
 AUX portage-2.3.84-eapply_non_verbose.patch 1688 BLAKE2B 127f018e36e2baf686a52c73a3b86df7d61f12ce939403edb9ee3151545050bb22d7e4bd9f3ca2f366cee4c9d11528c26d2927ad11a592630dc7414994b05ec4 SHA512 2fba5871d77c72ff900ab65853e6a3d63fefc8ea56d9ec1701c70dc6a18f011bc26753ca10058d544fbd1937cd8cfa91114c7afa2902aa10d48f61164ec0ccb1
 AUX portage-ccache.conf 60 BLAKE2B b45ac69ba4bf6b221191ab9618aa484948ad8765ae906402e83df4b72fd10e006621523fe5b6d59219318a978e368649047784bb85771cd189b2542a2e19f941 SHA512 36427e57046118ecf982fc3b1a80a3543b5682e3eef7df5dfc8a50b261a5da56f997dd75f63c5194049aceea204c37aee638a3bc383b9f7a0eff8ac9c35f3b1c
 DIST portage-3.0.1.tar.bz2 1043793 BLAKE2B 22b2e67870abdc0c26046a5ab1e40fa1214d8cc6779c5ced8014a5031d6c5344654cf2a2fb8f55370f2875d9eace6233f257a3232fa6bbc248a3692ad4b3475e SHA512 ccf962034b6b78bae3f8844c10002a34942beb535e2e8edd18017b95a120de4eebc394a1c02c1c1cf1031f4739893cef0fed7665e058c8f2d2a7794b218ef4b3
 DIST portage-3.0.5.tar.bz2 1043083 BLAKE2B f95fea950c15a9ddc7b1e87820a6d300c54d0b027c36a6522293496cbe39b40a7e4e472faf9f65c96c4f83f34a27830c4795d433860ed9f87d042f9b18a59878 SHA512 59f06514c16f215647ab7c3f4eec40bacb8e17bba46b2d59b94be938891c2e48d157d240fb47ae736968bbd754ea56343b0138d4ccba58458913b95a798f0c66
+DIST portage-3.0.8.tar.bz2 1046968 BLAKE2B 662147c37a9e7b81030fadb4d6438b734ee57a9eb9bfcee80991d137a017aa3541565961282ebf8736db71aeb05532ffa139ff3a34a84bc9064cf74427acb666 SHA512 5f97870a11ecca30ffe8f463f87cd16a1edb52b44832c6eaba15cadcfde2b4f7edf963749e45c8043b45b38e53ee210dc913aa2d2432a2bd3928cc27c8765a85
 EBUILD portage-3.0.1.ebuild 8419 BLAKE2B 93d5389f8ffb8b673900cb6b6c1913e798d3013b9d338c0ec564eb1c60ff3ed77130f50c1a254ae2ea5ed28cde76904fa45cf20133d11f75494173d56ab6ef34 SHA512 aaf22c5f9ac45fab773d6bb5864a5e554ce43b2438f91d27e4f5229ed3e56f6b0e2dac6087136b2d08cf915dd8b031c63efa1757009c54ce929dc9e697503fd3
-EBUILD portage-3.0.5.ebuild 8533 BLAKE2B b64a762d29f783ab085caf0a4b5cce6f98fdf36f28e0b09579141153b1fc267ffdff9a7822b7a4438ea80d3f2ef4f0c40bc77c1ab364ff3ebc671070d38245ce SHA512 892c64b22c3756d7523b5e2af36ce1de0b1801ebce6615a11b9ed3e573f1005cd6c91a7cd98101825e17f36a83cf8cade81c8b68432a00c4bc1b8ae1f366c2c3
-MISC ChangeLog 247 BLAKE2B a20ebf05379eac6d8f41e76a70aea0b1a9ca67e677be60b3642a9577400f913e77deaedbece2ee4850df73651a737f131b51dcf3e72b1cdb5e2e827273bf2ae0 SHA512 eb07316de87683ea6f5438bf2f294d22678c4f5e0f35721f1f3201f366947ca5b0667a99f9690d7da0c575a79552f80e433e5ff10132a3368a067638aac474af
+EBUILD portage-3.0.5.ebuild 8538 BLAKE2B 3c9ac8633a12ffcd319e9cdb03461e26b152c7fb4af76c0a9027323020902cec53f9ac617a8f4a97c03ce38de8881104a87377e82c320d37e99f152d3d4dd396 SHA512 d4d59537cf3d2daae01cad629e7687da423404a32241befbbf386b5860353aa083094ef85ffd95fc36d31c2b252017ce524a8189b792d77fd7108deb735b5941
+EBUILD portage-3.0.8.ebuild 8571 BLAKE2B d3517b0c625a84474490e912a3b9a0659617396c0996a88968edbb9368891595c88c45615b4576b6fce70a415648932c7cb08b1d99d0cf553683f17f2c2707f0 SHA512 a923dcb99d88c3cf6dfb4353a36b48c2d3d7f32381f83804dc16407a0247d4a4f26dc542f5855c3db3be4a3c33925cff0db1492087064f6432b91b02a6f16c41
+MISC ChangeLog 331 BLAKE2B 5df5a321a2b3e7fbfbc57b4351531f487718cb3c3dc72ae14579abd63d782c967c0e343ecc8c7c69f4f81aaf20c4b6786e5ca68e57ddfdef2f093d83d2522d3e SHA512 3c7f5c2f81fc3b9af15a1f4cd1990690796822a3e7c715c2939109d8865f43cec69e7d50ff9e4b0094705e8277cd8db1c063df9b010d7f0db3e756694a7af04e
 MISC metadata.xml 1761 BLAKE2B 3e559dbf9ce515afd93efb83950dc7250217814bc020856149d23bb69f46f5c58c3d480da1ebea52b2b7956c4cff7c9bc863653d181675058dee18bab2b784e5 SHA512 04f3971a0397cede4f77e9cb350413ae264e14debb88ca66149f2030ea872e86035c5760c2b5d8af326dfc8ffb59ee35b725ac7bf71d50e2376b478e19b7c082
